--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "azure-ai-inference>=1.0.0b9",
+    "numpy>=2.2.4",
+    "sentence-transformers>=4.1.0",
 ]
