--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,5 @@ dependencies = [
     "openai>=1.75.0",
     "python-dotenv>=1.1.0",
     "sentence-transformers>=4.1.0",
+    "streamlit>=1.45.1",
 ]
