--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,8 @@ dependencies = [
     "sentence-transformers>=4.1.0",
     "streamlit>=1.45.1",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.12.3",
+]
